--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
 {
-  "name": "Test",
+  "name": "typescript-exercise",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "start": "npm run build:live",
-    "build:live": "nodemon --exec ./node_modules/.bin/ts-node -- ./index.ts",
-    "build": "tsc index.ts",
+    "build": "tsc",
     "test": "jest --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^13.7.7",
     "save-dev": "0.0.1-security"
   },
   "devDependencies": {
     "@types/jest": "^25.1.3",
+    "@types/node": "^13.7.7",
     "jest": "^25.1.0",
     "nodemon": "^2.0.2",
     "ts-jest": "^25.2.1",
