Add Ans 1 ~ 8 & Update Q7.test

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,9 @@
     "node": true
   },
   "extends": [
-    "standard"
+    "standard",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended"
   ],
   "globals": {
     "Atomics": "readonly",
@@ -20,6 +22,7 @@
     "@typescript-eslint"
   ],
   "rules": {
+    "keyword-spacing": "off",
     "space-before-function-paren": "off",
     "indent": [
       "error",
